new form modifiers and css cleanup

--- a/src/styles/base/forms.less
+++ b/src/styles/base/forms.less
@@ -34,6 +34,7 @@
     input[type="time"],
     input[type="url"],
     input[type="week"],
+    input[type="range"],
     select,
     textarea {
         width: 100%; // Let's make 'em responsive!
