--- a/src/styles/objects/animate/slide-in-right.less
+++ b/src/styles/objects/animate/slide-in-right.less
@@ -1,13 +1,16 @@
-@keyframes slide-in-right {
-    0% {
-        transform: translateX(100%);
-        visibility: visible;
+.slide-in-right(@boolean) when (@boolean =true) {
+    @keyframes slide-in-right {
+        0% {
+            transform: translateX(100%);
+            visibility: visible;
+        }
+        100% {
+            transform: translateX(0);
+        }
     }
-    100% {
-        transform: translateX(0);
+    .slide-in-right {
+        animation-name: slide-in-right;
     }
 }
 
-.slide-in-right {
-    animation-name: slide-in-right;
-}
+.slide-in-right(@use-slide-in-right);
