--- a/src/styles/objects/animate/tada.less
+++ b/src/styles/objects/animate/tada.less
@@ -1,27 +1,30 @@
-@keyframes tada {
-    0% {
-        transform: scale(1);
+.tada(@boolean) when (@boolean =true) {
+    @keyframes tada {
+        0% {
+            transform: scale(1);
+        }
+        10%,
+        20% {
+            transform: scale(0.9) rotate(-3deg);
+        }
+        30%,
+        50%,
+        70%,
+        90% {
+            transform: scale(1.1) rotate(3deg);
+        }
+        40%,
+        60%,
+        80% {
+            transform: scale(1.1) rotate(-3deg);
+        }
+        100% {
+            transform: scale(1) rotate(0);
+        }
     }
-    10%,
-    20% {
-        transform: scale(0.9) rotate(-3deg);
-    }
-    30%,
-    50%,
-    70%,
-    90% {
-        transform: scale(1.1) rotate(3deg);
-    }
-    40%,
-    60%,
-    80% {
-        transform: scale(1.1) rotate(-3deg);
-    }
-    100% {
-        transform: scale(1) rotate(0);
+    .tada {
+        animation-name: tada;
     }
 }
 
-.tada {
-    animation-name: tada;
-}
+.tada(@use-tada);
