--- a/src/styles/objects/animate/zoom-in.less
+++ b/src/styles/objects/animate/zoom-in.less
@@ -1,13 +1,16 @@
-@keyframes zoom-in {
-    0% {
-        opacity: 0;
-        transform: scale3d(.3, .3, .3);
+.zoom-in(@boolean) when (@boolean =true) {
+    @keyframes zoom-in {
+        0% {
+            opacity: 0;
+            transform: scale3d(.3, .3, .3);
+        }
+        50% {
+            opacity: 1;
+        }
     }
-    50% {
-        opacity: 1;
+    .zoom-in {
+        animation-name: zoom-in;
     }
 }
 
-.zoom-in {
-    animation-name: zoom-in;
-}
+.zoom-in(@use-zoom-in);
