--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -107,14 +107,14 @@
 
 // Custom brand colors
 @color-primary:                 #ae956d;
-@color-primary-variant-1:       darken(@color-primary, 10%);
-@color-primary-variant-2:       lighten(@color-primary, 10%);
-@color-primary-variant-3:       saturate(@color-primary, 100%);
+@color-primary-light:           lighten(@color-primary, 10%);
+@color-primary-dark:            darken(@color-primary, 10%);
+@color-primary-accent:          overlay(@color-primary, lighten(@black, 20%));
 
 @color-secondary:               #3F51B5;
-@color-secondary-variant-1:     darken(@color-secondary, 10%);
-@color-secondary-variant-2:     lighten(@color-secondary, 10%);
-@color-secondary-variant-3:     saturate(@color-secondary, 100%);
+@color-secondary-light:         lighten(@color-secondary, 10%);
+@color-secondary-dark:          darken(@color-secondary, 10%);
+@color-secondary-accent:        overlay(@color-primary, lighten(@black, 20%));
 
 // UI colors
 @color-success:                 #5cb85c;
@@ -192,10 +192,9 @@
 @input-border-width:            1px;
 @input-border-radius:           0;
 @input-font-size:               @base-font-size;
-@input-height:                  48px;
+@input-height:                  @spacing-double;
 @input-horizontal-padding:      .5em;
 @input-box-shadow:              none;
-@input-focus-box-shadow:        inset 0 0 5px rgba(red(@grey-500), green(@grey-500), blue(@grey-500), 0.25);
 
 // Checkbox & radio buttons
 @input-box-size:                @spacing-base;
@@ -205,18 +204,29 @@
 @input-radio-checked-color:     currentColor;
 @input-radio-checked-margin:    .2em;
 
+// Range
+@range-thumb-color:             @color-primary;
+@range-thumb-border-radius:     50%;
+@range-thumb-height:            @base-font-size * 2;
+@range-thumb-width:             @base-font-size * 2;
+@range-thumb-box-shadow:        @box-shadow-default;
+@range-thumb-border-width:      0;
+@range-thumb-border-color:      transparent;
+
+@range-track-color:             @grey-50;
+@range-track-height:            @spacing-fourth;
+@range-track-box-shadow:        none;
+@range-track-border-width:      1px;
+@range-track-border-color:      @input-border-color;
+@range-track-border-radius:     @border-radius-default;
+
 // Buttons
-@button-font-size:              14px;
-@button-font-weight:            700;
+@button-font-size:              16px;
+@button-font-weight:            400;
 @button-height:                 40px;
 @button-horizontal-padding:     16px;
 @button-border-width:           1px;
 @button-border-radius:          0;
-
-// Button sizes will be derived from base button proportions
-@button-size-small:             0.8;
-@button-size-large:             1.5;
-@button-size-huge:              2;
 
 
 // TABLES
@@ -236,45 +246,6 @@
 @table-stripe-background:       @grey-25;
 
 
-// Z-INDEX SCALE
-// -------------------------------------------------------
-
-@z-index-1:                     100; // i.e navbar
-@z-index-2:                     200; // i.e navbar dropdown
-@z-index-3:                     300; // i.e fixed navbar
-@z-index-4:                     400;
-@z-index-5:                     500;
-@z-index-6:                     600; // i.e alerts & notifications
-@z-index-7:                     700; // i.e popover
-@z-index-8:                     800; // i.e tooltip
-@z-index-9:                     900; // i.e modal
-@z-index-10:                    1000; // development
-
-// Z-Index Applications
-@z-index-9--tooltip:            @z-index-9;
-
-
-// MISC
-// -------------------------------------------------------
-
-// Navigation responsive
-@nav-responsive-breakpoint:     768px;
-
-// Iconography
-@icon-font-size:                @base-font-size;
-
-// Border-radius
-@border-radius-default:         4px;
-@border-radius-large:           8px;
-
-// Box-shadow
-@box-shadow-default:            0 8px 16px rgba(0, 0, 0, 0.05);
-
-// Transition
-@transition-duration-default:   200ms;
-@transition-easing-default:     ease-in-out;
-
-
 // TOOLTIPS
 // -------------------------------------------------------
 @tooltip-background:            @grey-800;
@@ -292,6 +263,54 @@
 @tooltip-line-height:           @line-height-tighter;
 @tooltip-letter-spacing:        @letter-spacing-loose;
 @tooltip-arrow-size:            6px;
+
+
+// SPINNER
+// -------------------------------------------------------
+@spinner-color:                 @color-primary;
+@spinner-size:                  @spacing-base;
+@spinner-speed:                 800ms;
+@spinner-thickness:             4px;
+@spinner-opacity:               .5;
+
+
+// MISC
+// -------------------------------------------------------
+
+// Navigation responsive
+@nav-responsive-breakpoint:     768px;
+
+// Iconography
+@icon-font-size:                @base-font-size;
+
+// Border-radius
+@border-radius-small:           2px;
+@border-radius-default:         4px;
+@border-radius-large:           8px;
+
+// Box-shadow
+@box-shadow-small:              0 2px 4px rgba(0, 0, 0, 0.1);
+@box-shadow-default:            0 4px 8px rgba(0, 0, 0, 0.1);
+@box-shadow-large:              0 8px 16px rgba(0, 0, 0, 0.1);
+
+// Transition
+@transition-duration-default:   200ms;
+@transition-easing-default:     ease-in-out;
+
+
+// Z-INDEX SCALE
+// -------------------------------------------------------
+
+@z-index-1:                     100;  // i.e navbar
+@z-index-2:                     200;  // i.e navbar dropdown
+@z-index-3:                     300;
+@z-index-4:                     400;
+@z-index-5:                     500;
+@z-index-6:                     600;  // i.e alerts & notifications
+@z-index-7:                     700;  // i.e popover
+@z-index-8:                     800;  // i.e tooltip
+@z-index-9:                     900;  // i.e modal
+@z-index-10:                    1000; // development
 
 
 // INCLUDES
@@ -333,6 +352,7 @@
 @use-table-styles:              true;
 @use-tooltips:                  true;
 @use-embed-wrap:                true;
+@use-spinner:                   true;
 @use-responsive-navigation:     true;
 
 // Utilities
@@ -348,4 +368,52 @@
 @use-vertical-align:            true;
 @use-widths:                    true;
 
-
+// Animations
+// Sliding Enterances
+@use-slide-in-down:             true;
+@use-slide-in-left:             true;
+@use-slide-in-right:            true;
+@use-slide-in-up:               true;
+// Sliding Exits
+@use-slide-out-down:            true;
+@use-slide-out-left:            true;
+@use-slide-out-right:           true;
+@use-slide-out-up:              true;
+// Attention Seekers
+@use-bounce:                    true;
+@use-flash:                     true;
+@use-pulse:                     true;
+@use-shake:                     true;
+@use-swing:                     true;
+@use-tada:                      true;
+@use-wobble:                    true;
+// Bouncing Enterances
+@use-bounce-in:                 true;
+@use-bounce-in-down:            true;
+@use-bounce-in-left:            true;
+@use-bounce-in-right:           true;
+@use-bounce-in-up:              true;
+// Bouncing Exits
+@use-bounce-out:                true;
+@use-bounce-out-down:           true;
+@use-bounce-out-left:           true;
+@use-bounce-out-right:          true;
+@use-bounce-out-up:             true;
+// Fading Enterances
+@use-fade-in:                   true;
+@use-fade-in-down:              true;
+@use-fade-in-left:              true;
+@use-fade-in-right:             true;
+@use-fade-in-up:                true;
+// Fading Exits
+@use-fade-out:                  true;
+@use-fade-out-down:             true;
+@use-fade-out-left:             true;
+@use-fade-out-right:            true;
+@use-fade-out-up:               true;
+// Zooms
+@use-zoom-in:                   true;
+@use-zoom-out:                  true;
+// Specials
+@use-roll-in:                   true;
+@use-roll-out:                  true;
