--- a/src/styles/objects/animate/bounce-in-down.less
+++ b/src/styles/objects/animate/bounce-in-down.less
@@ -1,20 +1,23 @@
-@keyframes bounce-in-down {
-    0% {
-        opacity: 0;
-        transform: translateY(-100%);
+.bounce-in-down(@boolean) when (@boolean =true) {
+    @keyframes bounce-in-down {
+        0% {
+            opacity: 0;
+            transform: translateY(-100%);
+        }
+        60% {
+            opacity: 1;
+            transform: translateY(@spacing-base);
+        }
+        80% {
+            transform: translateY(-@spacing-half);
+        }
+        100% {
+            transform: translateY(0);
+        }
     }
-    60% {
-        opacity: 1;
-        transform: translateY(@spacing-base);
-    }
-    80% {
-        transform: translateY(-@spacing-half);
-    }
-    100% {
-        transform: translateY(0);
+    .bounce-in-down {
+        animation-name: bounce-in-down;
     }
 }
 
-.bounce-in-down {
-    animation-name: bounce-in-down;
-}
+.bounce-in-down(@use-bounce-in-down);
