--- a/src/styles/objects/animate/bounce-in-left.less
+++ b/src/styles/objects/animate/bounce-in-left.less
@@ -1,20 +1,23 @@
-@keyframes bounce-in-left {
-    0% {
-        opacity: 0;
-        transform: translateX(-100%);
+.bounce-in-left(@boolean) when (@boolean =true) {
+    @keyframes bounce-in-left {
+        0% {
+            opacity: 0;
+            transform: translateX(-100%);
+        }
+        60% {
+            opacity: 1;
+            transform: translateX(@spacing-base);
+        }
+        80% {
+            transform: translateX(-@spacing-half);
+        }
+        100% {
+            transform: translateX(0);
+        }
     }
-    60% {
-        opacity: 1;
-        transform: translateX(@spacing-base);
-    }
-    80% {
-        transform: translateX(-@spacing-half);
-    }
-    100% {
-        transform: translateX(0);
+    .bounce-in-left {
+        animation-name: bounce-in-left;
     }
 }
 
-.bounce-in-left {
-    animation-name: bounce-in-left;
-}
+.bounce-in-down(@use-bounce-in-down);
