--- a/src/styles/objects/animate/bounce-out-down.less
+++ b/src/styles/objects/animate/bounce-out-down.less
@@ -1,17 +1,20 @@
-@keyframes bounce-out-down {
-    0% {
-        transform: translateY(0);
+.bounce-out-down(@boolean) when (@boolean =true) {
+    @keyframes bounce-out-down {
+        0% {
+            transform: translateY(0);
+        }
+        20% {
+            opacity: 1;
+            transform: translateY(-@spacing-base);
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(100%);
+        }
     }
-    20% {
-        opacity: 1;
-        transform: translateY(-@spacing-base);
-    }
-    100% {
-        opacity: 0;
-        transform: translateY(100%);
+    .bounce-out-down {
+        animation-name: bounce-out-down;
     }
 }
 
-.bounce-out-down {
-    animation-name: bounce-out-down;
-}
+.bounce-out-down(@use-bounce-out-down);
