--- a/src/styles/objects/animate/bounce-out-left.less
+++ b/src/styles/objects/animate/bounce-out-left.less
@@ -1,17 +1,20 @@
-@keyframes bounce-out-left {
-    0% {
-        transform: translateX(0);
+.bounce-out-left(@boolean) when (@boolean =true) {
+    @keyframes bounce-out-left {
+        0% {
+            transform: translateX(0);
+        }
+        20% {
+            opacity: 1;
+            transform: translateX(@spacing-base);
+        }
+        100% {
+            opacity: 0;
+            transform: translateX(-100%);
+        }
     }
-    20% {
-        opacity: 1;
-        transform: translateX(@spacing-base);
-    }
-    100% {
-        opacity: 0;
-        transform: translateX(-100%);
+    .bounce-out-left {
+        animation-name: bounce-out-left;
     }
 }
 
-.bounce-out-left {
-    animation-name: bounce-out-left;
-}
+.bounce-out-left(@use-bounce-out-left);
