--- a/src/styles/objects/animate/fade-in-down.less
+++ b/src/styles/objects/animate/fade-in-down.less
@@ -1,14 +1,17 @@
-@keyframes fade-in-down {
-    0% {
-        opacity: 0;
-        transform: translateY(-@spacing-base);
+.fade-in-down(@boolean) when (@boolean =true) {
+    @keyframes fade-in-down {
+        0% {
+            opacity: 0;
+            transform: translateY(-100%);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
+    .fade-in-down {
+        animation-name: fade-in-down;
     }
 }
 
-.fade-in-down {
-    animation-name: fade-in-down;
-}
+.fade-in-down(@use-fade-in-down);
