--- a/src/styles/objects/animate/fade-in-left.less
+++ b/src/styles/objects/animate/fade-in-left.less
@@ -1,14 +1,17 @@
-@keyframes fade-in-left {
-    0% {
-        opacity: 0;
-        transform: translateX(-@spacing-base);
+.fade-in-left(@boolean) when (@boolean =true) {
+    @keyframes fade-in-left {
+        0% {
+            opacity: 0;
+            transform: translateX(-100%);
+        }
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
     }
-    100% {
-        opacity: 1;
-        transform: translateX(0);
+    .fade-in-left {
+        animation-name: fade-in-left;
     }
 }
 
-.fade-in-left {
-    animation-name: fade-in-left;
-}
+.fade-in-left(@use-fade-in-left);
