--- a/src/styles/objects/animate/fade-in-right.less
+++ b/src/styles/objects/animate/fade-in-right.less
@@ -1,14 +1,17 @@
-@keyframes fade-in-right {
-    0% {
-        opacity: 0;
-        transform: translateX(@spacing-base);
+.fade-in-right(@boolean) when (@boolean =true) {
+    @keyframes fade-in-right {
+        0% {
+            opacity: 0;
+            transform: translateX(100%);
+        }
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
     }
-    100% {
-        opacity: 1;
-        transform: translateX(0);
+    .fade-in-right {
+        animation-name: fade-in-right;
     }
 }
 
-.fade-in-right {
-    animation-name: fade-in-right;
-}
+.fade-in-right(@use-fade-in-right);
