--- a/src/styles/objects/animate/fade-in-up.less
+++ b/src/styles/objects/animate/fade-in-up.less
@@ -1,14 +1,17 @@
-@keyframes fade-in-up {
-    0% {
-        opacity: 0;
-        transform: translateY(@spacing-base);
+.fade-in-up(@boolean) when (@boolean =true) {
+    @keyframes fade-in-up {
+        0% {
+            opacity: 0;
+            transform: translateY(100%);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
+    .fade-in-up {
+        animation-name: fade-in-up;
     }
 }
 
-.fade-in-up {
-    animation-name: fade-in-up;
-}
+.fade-in-up(@use-fade-in-up);
