--- a/src/styles/objects/animate/fade-in.less
+++ b/src/styles/objects/animate/fade-in.less
@@ -1,12 +1,15 @@
-@keyframes fade-in {
-    0% {
-        opacity: 0;
+.fade-in(@boolean) when (@boolean =true) {
+    @keyframes fade-in {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
-    100% {
-        opacity: 1;
+    .fade-in {
+        animation-name: fade-in;
     }
 }
 
-.fade-in {
-    animation-name: fade-in;
-}
+.fade-in(@use-fade-in);
