--- a/src/styles/objects/animate/fade-out-right.less
+++ b/src/styles/objects/animate/fade-out-right.less
@@ -1,14 +1,17 @@
-@keyframes fade-out-right {
-    0% {
-        opacity: 1;
-        transform: translateX(0);
+.fade-out-right(@boolean) when (@boolean =true) {
+    @keyframes fade-out-right {
+        0% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+        100% {
+            opacity: 0;
+            transform: translateX(100%);
+        }
     }
-    100% {
-        opacity: 0;
-        transform: translateX(@spacing-base);
+    .fade-out-right {
+        animation-name: fade-out-right;
     }
 }
 
-.fade-out-right {
-    animation-name: fade-out-right;
-}
+.fade-out-right(@use-fade-out-right);
