--- a/src/styles/objects/animate/fade-out-up.less
+++ b/src/styles/objects/animate/fade-out-up.less
@@ -1,14 +1,17 @@
-@keyframes fade-out-up {
-    0% {
-        opacity: 1;
-        transform: translateY(0);
+.fade-out-up(@boolean) when (@boolean =true) {
+    @keyframes fade-out-up {
+        0% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(-100%);
+        }
     }
-    100% {
-        opacity: 0;
-        transform: translateY(-@spacing-base);
+    .fade-out-up {
+        animation-name: fade-out-up;
     }
 }
 
-.fade-out-up {
-    animation-name: fade-out-up;
-}
+.fade-out-up(@use-fade-out-up);
