--- a/src/styles/objects/animate/flash.less
+++ b/src/styles/objects/animate/flash.less
@@ -1,15 +1,18 @@
-@keyframes flash {
-    0%,
-    50%,
-    100% {
-        opacity: 1;
+.flash(@boolean) when (@boolean =true) {
+    @keyframes flash {
+        0%,
+        50%,
+        100% {
+            opacity: 1;
+        }
+        25%,
+        75% {
+            opacity: 0;
+        }
     }
-    25%,
-    75% {
-        opacity: 0;
+    .flash {
+        animation-name: flash;
     }
 }
 
-.flash {
-    animation-name: flash;
-}
+.flash(@use-flash);
