--- a/src/styles/objects/animate/pulse.less
+++ b/src/styles/objects/animate/pulse.less
@@ -1,15 +1,18 @@
-@keyframes pulse {
-    0% {
-        transform: scale(1);
+.pulse(@boolean) when (@boolean =true) {
+    @keyframes pulse {
+        0% {
+            transform: scale(1);
+        }
+        50% {
+            transform: scale(1.1);
+        }
+        100% {
+            transform: scale(1);
+        }
     }
-    50% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
+    .pulse {
+        animation-name: pulse;
     }
 }
 
-.pulse {
-    animation-name: pulse;
-}
+.pulse(@use-pulse);
