--- a/src/styles/objects/animate/roll-out.less
+++ b/src/styles/objects/animate/roll-out.less
@@ -1,14 +1,17 @@
-@keyframes roll-out {
-    0% {
-        opacity: 1;
-        transform: translateX(0px) rotate(0deg);
+.roll-out(@boolean) when (@boolean =true) {
+    @keyframes roll-out {
+        0% {
+            opacity: 1;
+            transform: translateX(0px) rotate(0deg);
+        }
+        100% {
+            opacity: 0;
+            transform: translateX(100%) rotate(120deg);
+        }
     }
-    100% {
-        opacity: 0;
-        transform: translateX(100%) rotate(120deg);
+    .roll-out {
+        animation-name: roll-out;
     }
 }
 
-.roll-out {
-    animation-name: roll-out;
-}
+.roll-out(@use-roll-out);
