--- a/src/styles/objects/animate/slide-out-down.less
+++ b/src/styles/objects/animate/slide-out-down.less
@@ -1,13 +1,16 @@
-@keyframes slide-out-down {
-    0% {
-        transform: translateY(0);
+.slide-out-down(@boolean) when (@boolean =true) {
+    @keyframes slide-out-down {
+        0% {
+            transform: translateY(0);
+        }
+        100% {
+            visibility: hidden;
+            transform: translateY(100%);
+        }
     }
-    100% {
-        visibility: hidden;
-        transform: translateY(100%);
+    .slide-out-down {
+        animation-name: slide-out-down;
     }
 }
 
-.slide-out-down {
-    animation-name: slide-out-down;
-}
+.slide-out-down(@use-slide-out-down);
