--- a/src/styles/objects/animate/swing.less
+++ b/src/styles/objects/animate/swing.less
@@ -1,22 +1,25 @@
-@keyframes swing {
-    20% {
-        transform: rotate(15deg);
+.swing(@boolean) when (@boolean =true) {
+    @keyframes swing {
+        20% {
+            transform: rotate(15deg);
+        }
+        40% {
+            transform: rotate(-10deg);
+        }
+        60% {
+            transform: rotate(5deg);
+        }
+        80% {
+            transform: rotate(-5deg);
+        }
+        100% {
+            transform: rotate(0deg);
+        }
     }
-    40% {
-        transform: rotate(-10deg);
-    }
-    60% {
-        transform: rotate(5deg);
-    }
-    80% {
-        transform: rotate(-5deg);
-    }
-    100% {
-        transform: rotate(0deg);
+    .swing {
+        transform-origin: top center;
+        animation-name: swing;
     }
 }
 
-.swing {
-    transform-origin: top center;
-    animation-name: swing;
-}
+.swing(@use-swing);
