--- a/src/styles/objects/animate/wobble.less
+++ b/src/styles/objects/animate/wobble.less
@@ -1,27 +1,30 @@
-@keyframes wobble {
-    0% {
-        transform: translateX(0%);
+.wobble(@boolean) when (@boolean =true) {
+    @keyframes wobble {
+        0% {
+            transform: translateX(0%);
+        }
+        15% {
+            transform: translateX(-25%) rotate(-5deg);
+        }
+        30% {
+            transform: translateX(20%) rotate(3deg);
+        }
+        45% {
+            transform: translateX(-15%) rotate(-3deg);
+        }
+        60% {
+            transform: translateX(10%) rotate(2deg);
+        }
+        75% {
+            transform: translateX(-5%) rotate(-1deg);
+        }
+        100% {
+            transform: translateX(0%);
+        }
     }
-    15% {
-        transform: translateX(-25%) rotate(-5deg);
-    }
-    30% {
-        transform: translateX(20%) rotate(3deg);
-    }
-    45% {
-        transform: translateX(-15%) rotate(-3deg);
-    }
-    60% {
-        transform: translateX(10%) rotate(2deg);
-    }
-    75% {
-        transform: translateX(-5%) rotate(-1deg);
-    }
-    100% {
-        transform: translateX(0%);
+    .wobble {
+        animation-name: wobble;
     }
 }
 
-.wobble {
-    animation-name: wobble;
-}
+.wobble(@use-wobble);
