--- a/src/styles/objects/animate/zoom-out.less
+++ b/src/styles/objects/animate/zoom-out.less
@@ -1,16 +1,19 @@
-@keyframes zoom-out {
-    0% {
-        opacity: 1;
+.zoom-out(@boolean) when (@boolean =true) {
+    @keyframes zoom-out {
+        0% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+            transform: scale3d(.3, .3, .3);
+        }
+        100% {
+            opacity: 0;
+        }
     }
-    50% {
-        opacity: 0;
-        transform: scale3d(.3, .3, .3);
-    }
-    100% {
-        opacity: 0;
+    .zoom-out {
+        animation-name: zoom-out;
     }
 }
 
-.zoom-out {
-    animation-name: zoom-out;
-}
+.zoom-out(@use-zoom-out);
