--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -31,6 +31,7 @@
     @import 'objects/icons';
     @import 'objects/embed-wrap';
     @import 'objects/nav-responsive';
+    @import	'objects/spinner';
     @import	'objects/table-styles';
     @import 'objects/tooltips';
 
@@ -55,3 +56,10 @@
 
     // Pages
     //@import 'pages/';
+
+
+
+h2 {
+    background: @color-primary-accent;
+    color: @color-primary-accent;
+}
