fix checkbox line-height calculation

--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -191,7 +191,7 @@
         label {
             position: relative;
             padding-left: (@input-box-size + @spacing-third);
-            line-height: @input-box-size - (@input-border-width * 2);
+            line-height: @input-box-size;
             &:before,
             &:after {
                 content: '';
