--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -142,7 +142,7 @@
     select:not([multiple]) {
         cursor: pointer;
         position: relative;
-        background-image: url(../images/form/select.svg);
+        background-image: data-uri('../images/form/select.svg');
         background-repeat: no-repeat;
         background-position: right 1em center;
         background-size: (@input-height / 3) auto;
@@ -151,17 +151,16 @@
             text-shadow: 0 0 0 #000;
         }
         &:hover {
-            background-image: url(../images/form/select_hover.svg);
+            background-image: data-uri('../images/form/select_hover.svg');
         }
     }
 
     // Radios and checkboxes
     .radio,
     .checkbox {
-        margin-bottom: @input-checkbox-radio-margin; // add some spacing between checkboxes/radios
         user-select: none;
-        &:last-child {
-            margin-bottom: 0;
+        & + & {
+            margin-top: @checkbox-radio-margin; // add some spacing between checkboxes/radios
         }
 
         // Inline styles
@@ -169,40 +168,38 @@
         &.radio--inline {
             @media @md-up {
                 display: inline-block;
-                margin-bottom: 0; // reset @input-checkbox-radio-margin
-                margin-right: @spacing-base; // space out consecutive inline controls
+                margin-top: 0; // reset margin
+                margin-right: @spacing-half; // space out consecutive inline controls
             }
         }
 
         // Hide inputs
-        input[type="checkbox"],
-        input[type="radio"] {
+        input {
             display: none;
         }
 
         // Control inputs with label
         label {
             position: relative;
-            padding-left: (@input-box-size + @spacing-third);
-            line-height: @input-box-size;
+            padding-left: (@checkbox-radio-size + @spacing-fourth);
+            line-height: @checkbox-radio-size;
             &:before,
             &:after {
                 content: '';
                 position: absolute;
                 left: 0;
                 top: 0;
-                width: @input-box-size;
-                height: @input-box-size;
-                line-height: @input-box-size;
+                width: @checkbox-radio-size;
+                height: @checkbox-radio-size;
+                line-height: @checkbox-radio-size;
             }
             &:before {
-                background-color: @input-background;
+                background: @checkbox-radio-background;
                 border: @input-border-width solid @input-border-color;
                 box-shadow: @input-box-shadow;
                 transition: border-color @transition-duration-default @transition-easing-default;
             }
             &:after {
-                font-size: @input-box-size; // set font-size for em-scaling
                 transform: scale(0) rotate(45deg);
                 transition: transform 100ms @transition-easing-default;
             }
@@ -210,8 +207,7 @@
                 border-color: @input-border-color-hover;
             }
         }
-        [type="checkbox"]:checked,
-        [type="radio"]:checked {
+        input:checked {
             + label:after {
                 transform: scale(1) rotate(45deg);
             }
@@ -222,16 +218,26 @@
     .checkbox {
         label {
             &:before {
-                border-radius: @input-checkbox-border-radius;
+                border-radius: @checkbox-border-radius;
             }
-            &:after {
-                border: solid @input-checkbox-checked-color;
-                border-width: 0 (1em / 6) (1em / 6) 0;
-                height: (1em / 1.5);
-                width: (1em / 2.75);
+            // Checked tick
+            &:after {
+                border: solid @checkbox-checked-color;
+                border-width: 0 @checkbox-checked-width @checkbox-checked-width 0;
+                height: round((@checkbox-checked-size / 1.5),0);
+                width: round((@checkbox-checked-size / 2.75),0);
                 position: absolute;
-                left: (1em / 3);
-                top: (1em / 10);
+                left: @checkbox-checked-x;
+                top: @checkbox-checked-y;
+            }
+        }
+        input:checked {
+            + label:before {
+                & when not(@checkbox-checked-background = transparent) {
+                    background: @checkbox-checked-background;
+                    border-color: @checkbox-checked-background;
+                    transition: all 100ms @transition-easing-default;
+                }
             }
         }
     }
@@ -242,10 +248,11 @@
             &:before {
                 border-radius: 100%;
             }
+            // Checked radio
             &:after {
-                background-color: @input-radio-checked-color;
+                background: @radio-checked-color;
                 background-clip: padding-box;
-                border: @input-radio-checked-margin solid transparent;
+                border: (@checkbox-radio-size - @radio-checked-size) solid transparent;
                 border-radius: 100%;
             }
         }
