tweak tables, compress select arrows

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -246,7 +246,7 @@
 @table-headfoot-color:          @grey-800;
 @table-headfoot-font-weight:    700;
 @table-headfoot-background:     transparent;
-@table-cell-padding:            6px @spacing-half;
+@table-cell-padding:            @spacing-half;
 @table-border-width:            1px;
 @table-border-color:            @grey-100;
 @table-stripe-background:       @grey-25;
