--- a/src/styles/objects/animate.less
+++ b/src/styles/objects/animate.less
@@ -36,20 +36,6 @@
     @import 'animate/tada.less';
     @import 'animate/wobble.less';
 
-    // Bouncing Enterances
-    @import 'animate/bounce-in.less';
-    @import 'animate/bounce-in-down.less';
-    @import 'animate/bounce-in-left.less';
-    @import 'animate/bounce-in-right.less';
-    @import 'animate/bounce-in-up.less';
-
-    // Bouncing Exits
-    @import 'animate/bounce-out.less';
-    @import 'animate/bounce-out-down.less';
-    @import 'animate/bounce-out-left.less';
-    @import 'animate/bounce-out-right.less';
-    @import 'animate/bounce-out-up.less';
-
     // Fading Enterances
     @import 'animate/fade-in.less';
     @import 'animate/fade-in-down.less';
@@ -68,7 +54,11 @@
     @import 'animate/zoom-in.less';
     @import 'animate/zoom-out.less';
 
-    // Specials
+    // Bounces
+    @import 'animate/bounce-in.less';
+    @import 'animate/bounce-out.less';
+
+    // Rolls
     @import 'animate/roll-in.less';
     @import 'animate/roll-out.less';
 
