--- a/src/styles/objects/animate/fade-in-left.less
+++ b/src/styles/objects/animate/fade-in-left.less
@@ -2,11 +2,11 @@
     @keyframes fade-in-left {
         0% {
             opacity: 0;
-            transform: translateX(-100%);
+            transform: translate3d(-@spacing-double, 0, 0);
         }
         100% {
             opacity: 1;
-            transform: translateX(0);
+            transform: none;
         }
     }
     .fade-in-left {
