--- a/src/styles/objects/animate/bounce-in.less
+++ b/src/styles/objects/animate/bounce-in.less
@@ -2,17 +2,20 @@
     @keyframes bounce-in {
         0% {
             opacity: 0;
-            transform: scale(.3);
+            transform: scale3d(.3, .3, .3);
         }
         50% {
             opacity: 1;
-            transform: scale(1.05);
+            transform: scale3d(1.1, 1.1, 1.1);
         }
         70% {
-            transform: scale(.9);
+            transform: scale3d(.9, .9, .9);
+        }
+        85% {
+            transform: scale3d(1.05, 1.05, 1.05);
         }
         100% {
-            transform: scale(1);
+            transform: none
         }
     }
     .bounce-in {
