--- a/src/styles/objects/animate/bounce-out.less
+++ b/src/styles/objects/animate/bounce-out.less
@@ -1,18 +1,17 @@
 @keyframes bounce-out {
-    0% {
-        transform: scale(1);
-    }
-    25% {
-        transform: scale(.95);
-    }
-    50% {
-        opacity: 1;
-        transform: scale(1.1);
-    }
-    100% {
-        opacity: 0;
-        transform: scale(.3);
-    }
+    20% {
+    transform: scale3d(.9, .9, .9);
+  }
+
+  50%, 55% {
+    opacity: 1;
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale3d(.3, .3, .3);
+  }
 }
 
 .bounce-out {
