--- a/src/styles/objects/animate/bounce.less
+++ b/src/styles/objects/animate/bounce.less
@@ -2,16 +2,22 @@
     @keyframes bounce {
         0%,
         20%,
-        50%,
+        53%,
         80%,
         100% {
-            transform: translateY(0);
+            animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+            transform: translate3d(0, 0, 0);
         }
         40% {
-            transform: translateY(-100%);
+            animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+            transform: translate3d(0, -30px, 0);
         }
-        60% {
-            transform: translateY(-50%);
+        70% {
+            animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+            transform: translate3d(0, -15px, 0);
+        }
+        90% {
+            transform: translate3d(0, -4px, 0);
         }
     }
     .bounce {
