--- a/src/styles/objects/animate/fade-in-up.less
+++ b/src/styles/objects/animate/fade-in-up.less
@@ -2,11 +2,11 @@
     @keyframes fade-in-up {
         0% {
             opacity: 0;
-            transform: translateY(100%);
+            transform: translate3d(0, @spacing-double, 0);
         }
         100% {
             opacity: 1;
-            transform: translateY(0);
+            transform: none;
         }
     }
     .fade-in-up {
