--- a/src/styles/objects/animate/pulse.less
+++ b/src/styles/objects/animate/pulse.less
@@ -1,13 +1,13 @@
 .pulse(@boolean) when (@boolean =true) {
     @keyframes pulse {
         0% {
-            transform: scale(1);
+            transform: none;
         }
         50% {
-            transform: scale(1.1);
+            transform: scale3d(1.1, 1.1, 1.1);
         }
         100% {
-            transform: scale(1);
+            transform: none;
         }
     }
     .pulse {
