--- a/src/styles/objects/animate/roll-in.less
+++ b/src/styles/objects/animate/roll-in.less
@@ -2,11 +2,11 @@
     @keyframes roll-in {
         0% {
             opacity: 0;
-            transform: translateX(-100%) rotate(-120deg);
+            transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
         }
         100% {
             opacity: 1;
-            transform: translateX(0px) rotate(0deg);
+            transform: none;
         }
     }
     .roll-in {
