--- a/src/styles/objects/animate/slide-in-left.less
+++ b/src/styles/objects/animate/slide-in-left.less
@@ -1,11 +1,11 @@
 .slide-in-left(@boolean) when (@boolean =true) {
     @keyframes slide-in-left {
         0% {
-            transform: translateX(-100%);
+            transform: translate3d(-100%, 0, 0);
             visibility: visible;
         }
         100% {
-            transform: translateX(0);
+            transform: none;
         }
     }
     .slide-in-left {
