--- a/src/styles/objects/animate/slide-in-right.less
+++ b/src/styles/objects/animate/slide-in-right.less
@@ -1,11 +1,11 @@
 .slide-in-right(@boolean) when (@boolean =true) {
     @keyframes slide-in-right {
         0% {
-            transform: translateX(100%);
+            transform: translate3d(100%, 0, 0);
             visibility: visible;
         }
         100% {
-            transform: translateX(0);
+            transform: none;
         }
     }
     .slide-in-right {
