--- a/src/styles/objects/animate/slide-out-down.less
+++ b/src/styles/objects/animate/slide-out-down.less
@@ -1,11 +1,11 @@
 .slide-out-down(@boolean) when (@boolean =true) {
     @keyframes slide-out-down {
         0% {
-            transform: translateY(0);
+            transform: none;
         }
         100% {
             visibility: hidden;
-            transform: translateY(100%);
+            transform: translate3d(0, 100%, 0);
         }
     }
     .slide-out-down {
