--- a/src/styles/objects/animate/slide-out-left.less
+++ b/src/styles/objects/animate/slide-out-left.less
@@ -1,11 +1,11 @@
 .slide-out-left(@boolean) when (@boolean =true) {
     @keyframes slide-out-left {
         0% {
-            transform: translateX(0);
+            transform: none;
         }
         100% {
             visibility: hidden;
-            transform: translateX(-100%);
+            transform: translate3d(-100%, 0, 0);
         }
     }
     .slide-out-left {
