--- a/src/styles/objects/animate/slide-out-right.less
+++ b/src/styles/objects/animate/slide-out-right.less
@@ -1,11 +1,11 @@
 .slide-out-right(@boolean) when (@boolean =true) {
     @keyframes slide-out-right {
         0% {
-            transform: translateX(0);
+            transform: none;
         }
         100% {
             visibility: hidden;
-            transform: translateX(100%);
+            transform: translate3d(100%, 0, 0);
         }
     }
     .slide-out-right {
