--- a/src/styles/objects/animate/slide-out-up.less
+++ b/src/styles/objects/animate/slide-out-up.less
@@ -1,11 +1,11 @@
 .slide-out-up(@boolean) when (@boolean =true) {
     @keyframes slide-out-up {
         0% {
-            transform: translateY(0);
+            transform: none;
         }
         100% {
             visibility: hidden;
-            transform: translateY(-100%);
+            transform: translate3d(0, -100%, 0);
         }
     }
     .slide-out-up {
