--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -1,24 +1,22 @@
 //
 // Tooltips
 // -------------------------------------------------------
-.tooltips(@boolean) when (@boolean = true) {
+.tooltips(@boolean) when (@boolean =true) {
 
     // Usage
     // <element class="tooltip tooltip--*" aria-label="..."/>
     // Make tooltip multi-line with class "tooltip--multiline"
 
     // Variables
+
     @tooltip-position: (@tooltip-offset + 2 + @tooltip-arrow-size);
     @tooltip-height: @tooltip-font-size + 2 * @tooltip-vertical-padding;
-
 
     // The 'before' pseudo element is concerned with the body
     // and 'after' pseudo element is concerned with the arrow.
     // of tips
-
     // The 'after' pseudo elements is generated only if arrow
     // size is larger than 0.
-
     .tooltip {
         position: relative;
         &:after,
@@ -28,13 +26,9 @@
             pointer-events: none;
             position: absolute;
             z-index: @z-index-8;
-            transition:
-                opacity @tooltip-anim-duration @transition-easing-default @tooltip-anim-delay,
-                transform @tooltip-anim-duration @transition-easing-default @tooltip-anim-delay;
-            animation-duration: @tooltip-anim-duration;
+            transition: opacity @tooltip-anim-duration @transition-easing-default @tooltip-anim-delay, transform @tooltip-anim-duration @transition-easing-default @tooltip-anim-delay;
         }
-
-        &:after when (@tooltip-arrow-size >= 1) {
+        &:after when (@tooltip-arrow-size >=1) {
             // Render tooltip arrow only when arrow size is larger than 0.
             content: "";
             width: 0;
@@ -43,7 +37,6 @@
             background: transparent;
             border: @tooltip-arrow-size solid transparent;
         }
-
         &:before {
             background: @tooltip-background;
             border-radius: @tooltip-border-radius;
@@ -58,12 +51,10 @@
             padding: @tooltip-vertical-padding @tooltip-horizontal-padding;
             font-weight: @tooltip-font-weight;
             word-wrap: break-word;
-            white-space:pre;
+            white-space: pre;
         }
-
         &:hover,
-        &:focus
-        &:active,
+        &:focus &:active,
         &.is-active {
             &:after,
             &:before {
@@ -72,17 +63,14 @@
             }
         }
     }
-
     // Tooltip variations
-
     // Top & bottom tooltips
-
     .tooltip--top {
         &:before,
         &:after {
             bottom: 100%;
         }
-        &:after when (@tooltip-arrow-size >= 1) {
+        &:after when (@tooltip-arrow-size >=1) {
             border-top-color: @tooltip-background;
             margin-bottom: -(@tooltip-arrow-size * 2);
         }
@@ -91,17 +79,16 @@
         &.is-active {
             &:after,
             &:before {
-            transform: translate(-50%, -@tooltip-position);
+                transform: translate3d(-50%, -@tooltip-position, 0);
             }
         }
     }
-
     .tooltip--bottom {
         &:before,
         &:after {
             top: 100%;
         }
-        &:after when (@tooltip-arrow-size >= 1) {
+        &:after when (@tooltip-arrow-size >=1) {
             border-bottom-color: @tooltip-background;
             margin-top: -(@tooltip-arrow-size * 2);
         }
@@ -110,28 +97,25 @@
         &.is-active {
             &:after,
             &:before {
-                transform: translate(-50%, @tooltip-position);
+                transform: translate3d(-50%, @tooltip-position, 0);
             }
         }
     }
-
     .tooltip--top,
     .tooltip--bottom {
         &:after,
         &:before {
             left: 50%;
-            transform: translate(-50%, 0);
+            transform: translate3d(-50%, 0, 0);
         }
     }
-
     // Left & right tooltips
-
     .tooltip--left {
         &:before,
         &:after {
             right: 100%;
         }
-        &:after when (@tooltip-arrow-size >= 1) {
+        &:after when (@tooltip-arrow-size >=1) {
             border-left-color: @tooltip-background;
             margin-right: -(@tooltip-arrow-size * 2);
         }
@@ -140,17 +124,16 @@
         &.is-active {
             &:after,
             &:before {
-            transform: translate(-@tooltip-position, -50%);
+                transform: translate3d(-@tooltip-position, -50%, 0);
             }
         }
     }
-
     .tooltip--right {
         &:before,
         &:after {
             left: 100%;
         }
-        &:after when (@tooltip-arrow-size >= 1) {
+        &:after when (@tooltip-arrow-size >=1) {
             border-right-color: @tooltip-background;
             margin-left: -(@tooltip-arrow-size * 2);
         }
@@ -159,22 +142,19 @@
         &.is-active {
             &:after,
             &:before {
-            transform: translate(@tooltip-position, -50%);
+                transform: translate3d(@tooltip-position, -50%, 0);
             }
         }
     }
-
     .tooltip--left,
     .tooltip--right {
         &:after,
         &:before {
             top: 50%;
-            transform: translate(0, -50%);
+            transform: translate3d(0, -50%, 0);
         }
     }
-
     // Multiline tooltip
-
     .tooltip--multiline {
         &:before {
             white-space: pre-line;
@@ -187,6 +167,6 @@
             }
         }
     }
-
 }
+
 .tooltips(@use-tooltips);
